// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`N-API Off 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`N-API Off 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`N-API Off: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "package.json",
  "query-engine-debian-openssl-1.1.x",
  "schema.prisma",
]
`;

exports[`N-API Off: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`N-API Off: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`N-API PRISMA_FORCE_NAPI=true 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine_napi-debian-openssl-1.1.x.so.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder "
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
N-API Query Engine    : placeholder (at node_modules/@prisma/engines/libquery_engine_napi-debian-openssl-1.1.x.so.node)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true and Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
]
`;

exports[`N-API PRISMA_FORCE_NAPI=true: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "scripts",
]
`;

exports[`N-API Preview Feature 1`] = `
Object {
  "delete": Object {
    "posts": Object {
      "count": 1,
    },
    "users": Object {
      "count": 1,
    },
  },
  "post.findUnique": Object {
    "id": 1,
    "title": "Test",
    "userId": 1,
  },
  "user.create": Object {
    "email": "test@example.com",
    "id": 1,
    "name": "Test",
    "posts": Array [
      Object {
        "id": 1,
        "title": "Test",
        "userId": 1,
      },
    ],
  },
  "users.findMany": Array [],
}
`;

exports[`N-API Preview Feature 2`] = `
"prisma                : placeholder 
@prisma/client        : placeholder 
Current platform      : placeholder 
Query Engine          : placeholder (at node_modules/@prisma/engines/query-engine-debian-openssl-1.1.x)
Migration Engine      : placeholder (at node_modules/@prisma/engines/migration-engine-debian-openssl-1.1.x)
Introspection Engine  : placeholder (at node_modules/@prisma/engines/introspection-engine-debian-openssl-1.1.x)
Format Binary         : placeholder (at node_modules/@prisma/engines/prisma-fmt-debian-openssl-1.1.x)
Default Engines Hash  : placeholder 
Studio                : placeholder 
Preview Features      : placeholder "
`;

exports[`N-API Preview Feature: ./node_modules/.prisma/client 1`] = `
Array [
  "index-browser.js",
  "index.d.ts",
  "index.js",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "schema.prisma",
]
`;

exports[`N-API Preview Feature: ./node_modules/@prisma/engines 1`] = `
Array [
  "README.md",
  "dist",
  "download",
  "introspection-engine-debian-openssl-1.1.x",
  "migration-engine-debian-openssl-1.1.x",
  "package.json",
  "prisma-fmt-debian-openssl-1.1.x",
  "query-engine-debian-openssl-1.1.x",
]
`;

exports[`N-API Preview Feature: ./node_modules/prisma 1`] = `
Array [
  "README.md",
  "build",
  "install",
  "libquery_engine_napi-debian-openssl-1.1.x.so.node",
  "package.json",
  "preinstall",
  "prisma-client",
  "query-engine-debian-openssl-1.1.x",
  "scripts",
]
`;
